# Charybdis

./: .gitignore  CMakeLists.txt  README.md
doc/: Charybdis-v1-spec.md
msvc/: charybdis_bench.sln  charybdis_bench.vcxproj  charybdis_bench.vcxproj.filters
src/: charybdis.c  charybdis.h  charybdis_avx2.c  charybdis_avx2.h
test_vectors/: charybdis_basic.txt  charybdis_decryption_round_states.txt  charybdis_encryption_round_states.txt  charybdis_key_schedule.txt  charybdis_monte_carlo.txt  charybdis_random.txt  charybdis_variable_key.txt  charybdis_variable_text.txt
tool/: charybdis_constants.c
